--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Topic :: Network Engineering",
+    "Topic :: System :: Networking",
 ]
 dependencies = [
     "asn1crypto",
@@ -54,7 +54,7 @@ exclude = ["snmpack/tests"]
 
 [tool.black]
 line-length = 120
-target-version = ['py311']
+target-version = ['py312']
 
 [tool.pytest.ini_options]
 testpaths = ["snmpack/tests"]
